--- a/metadata.yaml
+++ b/metadata.yaml
@@ -29,5 +29,6 @@ subjects:
 - !lcc 'PH'
 - !lcsh 'Historical fiction'
 - !lcsh 'Hungarian fiction -- Translations into Finnish'
+- GITenberg
 title: 'Idän kuningatar: Historiallinen kertomus'
 url: http://www.gutenberg.org/ebooks/38878
